<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUpActivity">

    <LinearLayout
        android:padding="32dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="120dp"
                android:layout_height="80dp"
                android:layout_gravity="center|top"
                android:layout_marginTop="60dp"
                app:srcCompat="@drawable/logoeith" />

            <TextView
                android:id="@+id/tvSubTitleSignUp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/signup_subtitle"
                android:textColor="#9EB0BC"
                android:layout_marginLeft="8dp"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@+id/imageView"
                app:layout_constraintTop_toBottomOf="@+id/imageView" />
        </androidx.constraintlayout.widget.ConstraintLayout>


        <LinearLayout
            android:layout_marginTop="32dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <LinearLayout style="@style/container_edit_text">

                <TextView
                    style="@style/label_edit_text"
                    android:text="@string/prompt_user"
                    android:textAlignment="center"
                    android:textSize="25dp"/>

                <EditText
                    android:id="@+id/etUserNameSignUp"
                    android:layout_width="290dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center|top"
                    android:background="@drawable/editarredondado"
                    android:ems="10"
                    android:inputType="text"
                    android:text=""
                    android:textSize="18dp" />

            </LinearLayout>

            <LinearLayout style="@style/container_edit_text">

                <TextView
                    style="@style/label_edit_text"
                    android:text="@string/prompt_email"
                    android:textAlignment="center"
                    android:textSize="25dp"/>

                <EditText
                    android:id="@+id/etEmailSignUp"
                    android:layout_width="290dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center|top"
                    android:background="@drawable/editarredondado"
                    android:ems="10"
                    android:inputType="textEmailAddress"
                    android:text=""
                    android:textSize="18dp" />

            </LinearLayout>

            <LinearLayout style="@style/container_edit_text">

                <TextView
                    style="@style/label_edit_text"
                    android:text="@string/prompt_password"
                    android:textAlignment="center"
                    android:textSize="25dp"/>

                <EditText
                    android:id="@+id/etPasswordSignUp"
                    android:layout_width="290dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center|top"
                    android:background="@drawable/editarredondado"
                    android:ems="10"
                    android:inputType="textPassword"
                    android:textSize="18dp" />
            </LinearLayout>

            <Button
                android:id="@+id/btCreateAccount"
                style="@style/button"
                android:layout_width="150dp"
                android:layout_marginTop="10dp"
                android:layout_alignParentRight="true"
                android:layout_gravity="center|right"
                android:background="@drawable/buttomarredondado"
                android:text="@string/button_create_account" />

        </LinearLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>